<resources>
    <string name="app_name">MyRecipe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="str_recipe_ingredients">Ingredients</string>
    <string name="str_recipe_description">Description</string>
    <string name="str_btn_save">Save</string>
    <string name="str_btn_delete">Delete</string>
    <string name="str_card_iv_recipe">View with image</string>
    <string name="str_learn_more">Learn More</string>
    <string name="str_more_markets_btn">More Markets</string>
    <string name="str_delete_recipe">Delete</string>
    <string name="str_recipe_name">Recipe Name</string>
    <string name="str_nav_recipes">Recipes</string>
    <string name="str_nav_nearby_markets">Nearby Markets</string>
    <string name="str_nav_settings">Settings</string>
    <string name="str_french">French</string>
    <string name="str_english" >English</string>
    <string name="str_dutch" >Dutch</string>
    <string name="str_load_image" >Choose</string>
    <string name="str_load_imageview">Image</string>
    <string name="stri_search_menu">Search</string>
</resources>